--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -27,6 +27,12 @@
             height: 100%;
             width: auto;
 
+            &--full {
+                display: flex;
+                align-items: center;
+                width: 100%;
+                justify-content: center;
+            }
             &--row {
                 display: flex;
                 align-items: center;
@@ -51,24 +57,27 @@
             justify-content: space-around;
             align-items: center;
             align-content: center;
+            width: 70%;
         }
 
         button {
             // width: 15vw;
             // height: 10vw;
-            width: 9vw;
-            height: 5vw;
+            width: 19vw;
+            height: 9vw;
             background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
             color: $token-button-primary-text-color-hover;
             // box-shadow: -6px -7px 18px #e5e5e5, 10px 5px 15px #3f1b7c;
-            box-shadow: -6px -7px 10px -1px #e5e5e5, 9px 9px 12px -3px #3f1b7c;
+            box-shadow: -6px -7px 10px -1px #e5e5e5, 7px 6px 16px -5px #3f1b7c;
             border-left: 1px solid #ffffff99;
             border-top: 1px solid #ffffff99;
             display: flex;
             flex-direction: column;
+            font-family: $token-font-family-text;
             justify-content: space-evenly;
             align-items: center;
             margin: 10px;
+            font-size: 20px;
             border: 0px;
             // border-radius: 20px;
             border-radius: 10px;
@@ -78,7 +87,7 @@
                 box-shadow: inset 5px 5px 6px #48297d, inset -2px -2px 6px #ba9dec;
             }
 
-            &:focus, &:active {
+            &:focus{
                 background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
                 box-shadow: inset 5px 5px 6px #48297d, inset -2px -2px 6px #ba9dec;
             }
@@ -104,7 +113,7 @@
             h4 {
                 font-size: 20px;
                 font-family: $token-font-family-heading;
-                width: 36%;
+                width: 40%;
             }
             &:hover {
                 background: rgb(0,0,0,0);
@@ -112,7 +121,7 @@
                 border-bottom: 3px solid #5D379E;
             }
 
-            &:focus, &:active {
+            &:focus{
                 background: rgb(0,0,0,0);
                 box-shadow: none;
                 border-bottom: 3px solid #5D379E;
@@ -127,25 +136,25 @@
         }
     
         img {
-            // width: 50px;
-            // height: 50px;
+            width: 50px;
+            height: 50px;
             // padding: 0px 5px;
-            width: 30px;
-            height: 30px;
+            // width: 30px;
+            // height: 30px;
             padding: 0px 5px;
             filter: brightness(0) invert(1);
         }
 
         h3 {
             font-family: $token-font-family-heading;
-            font-size: $token-font-size-xl;
+            font-size: 2rem;
             margin: 9px;
             color: #7e4ed1;
         }
 
         h2 {
             font-family: $token-font-family-heading;
-            font-size: 2.1rem;
+            font-size: 2.3rem;
         }
         
     }
