--- a/src/components/shared/container/container.scss
+++ b/src/components/shared/container/container.scss
@@ -8,16 +8,16 @@
     border: 0px solid grey;
     // box-shadow: 10px 9px 38px #aab4e7c4, -3px -3px 6px #f1f1f1;
     // box-shadow: 10px 9px 38px #aab4e7c4, -3px -3px 6px #f1f1f1;
-    box-shadow: 20px ​24px 16px -15px #aab4e79c, -3px -3px 6px #f1f1f1;
+    box-shadow: 10px 9px 20px 0px #aab4e7c4, -3px -3px 6px #f1f1f1;
     // width: 1000px;
     // height: 300px;
     overflow: auto;
     padding: 30px;
-    border-radius: 40px;
+    border-radius: 20px;
     display: flex;
     flex-direction: var(--flexDirection);
     align-content: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: var(--alignItems);
 
     
@@ -46,9 +46,9 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: 26%;
+    right: 7%;
 
-    &:hover {
+    &:hover, &:focus{
         background-color: var(close-button-bg-color);
     }
 }
