--- a/src/components/shared/date-input/date-input.scss
+++ b/src/components/shared/date-input/date-input.scss
@@ -31,7 +31,7 @@
         height: 35px;
         border-radius: 8px;
         border: 0px solid grey;
-        box-shadow: 3px 5px 9px 0px #aab4e7cc;
+        box-shadow: 3px 4px 9px -2px #aab4e7cc;
         padding: 0px 10px;
         font-size: 20px;
         font-family: $token-font-family-text;
@@ -58,7 +58,7 @@
         font-size: 20px;
         font-family: $token-font-family-text;
 
-        &:hover {
+        &:hover, &:focus{
             outline: none;
             background-color: $token-button-primary-background-color-base;
             color: white;
