--- a/src/components/shared/modal/modal.scss
+++ b/src/components/shared/modal/modal.scss
@@ -9,21 +9,27 @@
     background-color: rgb(0, 0, 0, 0.4);
     border: 0px solid grey;
     backdrop-filter: blur(10px);     
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-content {
     background: white;
+    top: 0%;
+    position: absolute;
     margin: 3% auto;
     // padding: 20px;
     padding: 50px;
     border: 0px solid grey;
     // width: 50%;
-    min-width: 55%;
+    // min-width: 55%;
+    min-width: 80%;
     max-width: 81%;
-
+    min-height: 31%;
     height: auto;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     border-radius: 10px;
     box-shadow: 10px 12px 29px #4a4444; //-12px -10px 20px #ffffff, 
 }
@@ -37,9 +43,9 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: 26%;
+    right: 7%;
 
-    &:hover {
+    &:hover, &:focus{
         background-color: var(close-button-bg-color);
     }
 }
@@ -47,7 +53,7 @@
 .button {
     background-color: var(button-bg-color);
 
-    &:hover {
+    &:hover, &:focus{
         background-color: var(button-bg-color);
     }
 }
