--- a/src/pages/patient-page/view-patient-page/view-patient-page.scss
+++ b/src/pages/patient-page/view-patient-page/view-patient-page.scss
@@ -12,6 +12,7 @@
     // background-position-y: -110px;
     @media (min-width: $token-media-query-lg) {
         width: 100%;
+        height: 100%;
     }
 
     h2 {
@@ -23,30 +24,47 @@
         // flex-direction: column;
         // justify-content: center;
         // align-items: center;
+        color: #5d00fb;
+        padding: 20px 10px;
         font-size: 28px;
+    }
+
+    .content-container {
+        // box-shadow: 3px 4px 9px -2px #aab4e7cc;
+        border-radius: 20px;
+        width: 100%;
+        font-size: 18px;
+        // margin-top: 50px;
+        // margin-bottom: 50px;
+        // box-shadow: 3px 4px 9px -2px #aab4e7cc;
+        padding: 30px;
+    }
+    h3 {
+        margin-right: 10px;
     }
 
     .view-patient-page {
         display: flex;
         // padding: 20px 0px;
         backdrop-filter: blur(30px);
+        padding-top: 131px;
         padding-bottom: 40px;
-        width: 100%;
         height: auto;
         justify-content: center;
         flex-direction: row;
-        padding-top: 131px;
+       
         align-items: center;
+        width: 100%;
         // backdrop-filter: blur(30px);
     }
 
     .title {
-        padding-top: 20px;
+        padding: 20px 20px 10px 20px;
         margin: 0;
         font-family: $token-font-family-heading;
         width: auto;
         position: relative;
-        border-bottom: 4px solid $token-button-primary-background-color-base;
+        color: $token-button-primary-background-color-base;
         background-color: white;
     }
 
@@ -57,21 +75,78 @@
         border-bottom: 2px solid $token-button-primary-background-color-base;
         background-color: white;
     }
+    .span {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: space-evenly;
+        padding: 10px;
+        &--title {
+            padding: 0px;
+            margin: 0px;
+            color: $token-button-primary-background-color-hover;
+        }
+        &--text {
+            // box-shadow: 3px 4px 9px -2px #aab4e7cc;
+            padding: 10px;
+            border-radius: 10px;
+            margin: 0px;
+        }
+    }
 
     .button {
         padding: 10px;
-        margin-left: 10px;
+        margin: 16px;
         border-radius: 15px;
         font-family: $token-font-family-text;
         font-weight: 400;
+        // color:  $token-button-primary-background-color-base;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        box-shadow: 3px 4px 9px -2px #aab4e7cc;
+        background: #8f60df;
+        color: white;
+        justify-content: center;
+        max-height: 38px;
+        .img {
+            filter: brightness(0) invert(1);
+            height: 16px;
+            width: 16px;
+            padding-right: 5px;
+        }
 
+        p {
+            text-decoration: none;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            flex-direction: row;
+            align-content: center;
+            padding: 0px;
+            margin: 0px;
+            color: white;
+        }
         a {
             text-decoration: none;
-            font-size: 18px;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            flex-direction: row;
+            align-content: center;
+            color: white;
         }
 
         &:hover {
-            box-shadow:inset 2px 2px 5px #b8b9be,inset -3px -3px 7px #fff;
+            // box-shadow:inset 2px 2px 5px #b8b9be,inset -3px -3px 7px #fff;
+            background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
+            box-shadow:inset 5px 5px 6px #48297d, inset -2px -2px 6px #ba9dec;
+        }
+
+        &:visited {
+            color:  $token-button-primary-background-color-base;
         }
     }
 
