--- a/src/pages/report-page/report-page.scss
+++ b/src/pages/report-page/report-page.scss
@@ -11,6 +11,7 @@
     // background-position-y: -110px;
     @media (min-width: $token-media-query-lg) {
         width: 100%;
+        height: 100%;
     }
 
     h2 {
@@ -35,5 +36,9 @@
         flex-direction: row;
         align-items: center;
         // backdrop-filter: blur(30px);
+        // @media (min-width: $token-media-query-lg) {
+        //     width: 100%;
+        //     height: 100%;
+        // }
     }
 }
