--- a/src/components/report/display-report/display-report.scss
+++ b/src/components/report/display-report/display-report.scss
@@ -21,6 +21,61 @@
         padding: 20px 10px;
         font-size: 28px;
     }
+    .button {
+        padding: 10px;
+        margin: 16px;
+        border-radius: 15px;
+        font-family: $token-font-family-text;
+        font-weight: 400;
+        // color:  $token-button-primary-background-color-base;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        box-shadow: 3px 4px 9px -2px #aab4e7cc;
+        background: #8f60df;
+        color: white;
+        justify-content: center;
+        max-height: 38px;
+        .img {
+            filter: brightness(0) invert(1);
+            height: 16px;
+            width: 16px;
+            padding-right: 5px;
+        }
+
+        p {
+            text-decoration: none;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            flex-direction: row;
+            align-content: center;
+            padding: 0px;
+            margin: 0px;
+            color: white;
+        }
+        a {
+            text-decoration: none;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            flex-direction: row;
+            align-content: center;
+            color: white;
+        }
+
+        &:hover {
+            // box-shadow:inset 2px 2px 5px #b8b9be,inset -3px -3px 7px #fff;
+            background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
+            box-shadow:inset 5px 5px 6px #48297d, inset -2px -2px 6px #ba9dec;
+        }
+
+        &:visited {
+            color:  $token-button-primary-background-color-base;
+        }
+    }
 
     .name {
         font-family: $token-font-family-heading;
@@ -54,6 +109,7 @@
             padding: 10px;
             border-radius: 10px;
             margin: 0px;
+            font-weight: 400;
         }
     }
 
