--- a/src/pages/report-page/report-page.scss
+++ b/src/pages/report-page/report-page.scss
@@ -30,6 +30,7 @@
         display: flex;
         // padding: 20px 0px;
         backdrop-filter: blur(30px);
+        min-height: 100%;
         width: 100%;
         height: auto;
         justify-content: center;
