--- a/src/components/shared/modal/modal.scss
+++ b/src/components/shared/modal/modal.scss
@@ -1,10 +1,11 @@
 .modal {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     min-width: 100%;
-    height: 100%;
-    overflow: auto;
+    min-height: 100%;
+    height: auto;
+    // overflow: auto;
     z-index: 990;
     background-color: rgb(0, 0, 0, 0.4);
     border: 0px solid grey;
@@ -12,12 +13,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-bottom: 34px;
 }
 
 .modal-content {
     background: white;
     top: 0%;
-    position: absolute;
+    position: relative;
     margin: 3% auto;
     // padding: 20px;
     padding: 50px;
