--- a/src/components/patient-form/patient-information/patient-information.scss
+++ b/src/components/patient-form/patient-information/patient-information.scss
@@ -124,6 +124,7 @@
     height: 45px;
     border-radius: 10px;
     margin: 20px 10px;
+    padding: 5px 10px;
     font-family: $token-font-family-text;
     color: $token-button-primary-text-color-base;
     box-shadow: 3px 4px 9px -2px #aab4e7cc;
@@ -151,7 +152,8 @@
 
 .save {
     background-color: $token-color-secondary-base;
-    width: 130px;
+    // width: 130px;
+    min-width: 130px;
     height: 45px;
     border-radius: 10px;
     margin: 20px 10px;
@@ -160,9 +162,8 @@
     font-size: $token-font-size-md;
     border: 0px solid white;
     font-weight: 400;
-    
+    padding: 5px 10px;
     // box-shadow: 3px 5px 9px 0px rgba(0, 0, 0, 0.25);
-    ;
     // border: 1px solid #d1d9e6;
     // right: 3%;
     // &:hover {
