--- a/src/components/patient-form/patient-information/patient-information.scss
+++ b/src/components/patient-form/patient-information/patient-information.scss
@@ -27,6 +27,8 @@
         align-items: flex-start;
         align-content: center;
         width: auto;
+        background-color: rgb(0,0,0,0);
+        border: 0px solid;
 
         &:hover, &:focus{
             text-decoration: underline 2px solid $token-button-primary-background-color-base;
@@ -37,6 +39,9 @@
         &--button {
             font-family: $token-font-family-heading;
             font-size: 22px;
+            background-color: rgb(0,0,0,0);
+            border: 0px solid;
+            padding: 10px;
         }
     }
 
