--- a/src/pages/patient-page/view-patient-page/view-patient-page.scss
+++ b/src/pages/patient-page/view-patient-page/view-patient-page.scss
@@ -96,6 +96,8 @@
         color: white;
         justify-content: center;
         max-height: 38px;
+        border: 0px;
+        
         .img {
             filter: brightness(0) invert(1);
             height: 16px;
