--- a/src/pages/patient-page/patient-database/patient-database.scss
+++ b/src/pages/patient-page/patient-database/patient-database.scss
@@ -1,6 +1,7 @@
 .patient-database-bg {
     width: 100%;
-    height: auto;
+    // height: auto;
+    min-height: 100%;
     background-position: center;
     background-size: cover;
     position: absolute;
