minor ui issue with button

--- a/src/components/report/display-report/display-report.scss
+++ b/src/components/report/display-report/display-report.scss
@@ -26,6 +26,7 @@
         align-items: center;
         box-shadow: 3px 4px 9px -2px #aab4e7cc;
         background: #8f60df;
+        border: 0px solid;
         color: white;
         justify-content: center;
         max-height: 38px;
