--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -60,7 +60,7 @@
             button {
                 background: white;
                 border: 0px;
-                font-family: 'Gill Sans MT';
+                font-family: 'Gill Sans Mt', sans-serif;
             }
         }
 
@@ -85,7 +85,7 @@
     }
 
     .link-list {
-        font-family: 'Gill Sans MT';
+        font-family: 'Gill Sans Mt', sans-serif;
         list-style-type: none;
         font-size: 15px;
         display: flex;
