--- a/src/components/patient-database/patient-database.scss
+++ b/src/components/patient-database/patient-database.scss
@@ -65,7 +65,7 @@
     button {
         background: rgb(0, 0, 0, 0);
         border: 0px;
-        font-family: 'Gill Sans MT';
+        font-family: 'Gill Sans Mt', sans-serif;
         color: $token-button-primary-background-color-base;
         font-size: 17px;
         text-align: center;
