--- a/src/components/shared/alert-box/alert-box.scss
+++ b/src/components/shared/alert-box/alert-box.scss
@@ -1,5 +1,5 @@
 .alert-box {
-    font-family: 'Gill Sans MT';
+    font-family: 'Gill Sans Mt', sans-serif;
     display: var(--alert-box-display);
     .error {
         display: flex;
