--- a/src/components/shared/search-input/search-input.scss
+++ b/src/components/shared/search-input/search-input.scss
@@ -1,7 +1,7 @@
 .search-input {
     width: auto;
     font-size: 22px;
-    font-family: 'Gill Sans MT';
+    font-family: 'Gill Sans Mt', sans-serif;
     width: auto;
     height: 80px;
     padding: 10px;
@@ -36,7 +36,7 @@
         box-shadow: 3px 4px 9px -2px #aab4e7cc;
         padding: 0px 10px;
         font-size: 20px;
-        font-family: 'Gill Sans MT';
+        font-family: 'Gill Sans Mt', sans-serif;
 
         &:focus {
             outline: none;
@@ -56,6 +56,6 @@
 
     option {
         font-size: 20px;
-        font-family: 'Gill Sans MT';
+        font-family: 'Gill Sans Mt', sans-serif;
     }
 }
