--- a/src/components/shared/text-input/text-input.scss
+++ b/src/components/shared/text-input/text-input.scss
@@ -1,5 +1,5 @@
 .text-input {
-    font-family: 'Gill Sans MT';
+    font-family: 'Gill Sans Mt', sans-serif;
     width: auto;
     min-height: 80px;
     padding: 0px 10px;
@@ -51,7 +51,7 @@
         box-shadow:  3px 4px 9px -2px #aab4e7cc;
         padding: 0px 10px;
         font-size: 20px;
-        font-family: 'Gill Sans MT';
+        font-family: 'Gill Sans Mt', sans-serif;
 
         &:focus {
             outline: none;
