--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -69,7 +69,7 @@
             border-top: 1px solid #ffffff99;
             display: flex;
             flex-direction: column;
-            font-family: 'Gill Sans MT';
+            font-family: 'Gill Sans Mt', sans-serif;
             justify-content: space-evenly;
             align-items: center;
             margin: 10px;
@@ -103,7 +103,7 @@
             
             h4 {
                 font-size: 20px;
-                font-family: Bogue;
+                font-family: 'Bogue', serif;
                 width: 40%;
             }
             &:hover {
@@ -134,14 +134,14 @@
         }
 
         h3 {
-            font-family: Bogue;
+            font-family: 'Bogue', serif;
             font-size: 2rem;
             margin: 9px;
             color: #7e4ed1;
         }
 
         h2 {
-            font-family: Bogue;
+            font-family: 'Bogue', serif;
             font-size: 2.3rem;
         }
         
