--- a/src/components/report/display-report/display-report.scss
+++ b/src/components/report/display-report/display-report.scss
@@ -9,7 +9,7 @@
     align-content: center;
 
     h2 {
-        font-family: Bogue;
+        font-family: 'Bogue', serif;
         width: inherit;
         color: #5d00fb;
         padding: 20px 10px;
@@ -19,7 +19,7 @@
         padding: 10px;
         margin: 16px;
         border-radius: 15px;
-        font-family: 'Gill Sans MT';
+        font-family: 'Gill Sans Mt', sans-serif;
         font-weight: 400;
         display: flex;
         flex-direction: row;
@@ -71,7 +71,7 @@
     }
 
     .name {
-        font-family: Bogue;
+        font-family: 'Bogue', serif;
         width: auto;
         position: relative;
         color: #5d00fb;
@@ -98,7 +98,7 @@
     }
 
     .title {
-        font-family: Bogue;
+        font-family: 'Bogue', serif;
         width: auto;
         position: relative;
         color: $token-button-primary-background-color-base;
@@ -106,7 +106,7 @@
     }
 
     .subtitle {
-        font-family: Bogue;
+        font-family: 'Bogue', serif;
         width: auto;
         position: relative;
         border-bottom: 2px solid $token-button-primary-background-color-base;
@@ -115,9 +115,9 @@
 }
 
 h4{
-    font-family: 'Gill Sans MT';
+    font-family: 'Gill Sans Mt', sans-serif;
 }
 
 p {
-    font-family: 'Gill Sans MT';
+    font-family: 'Gill Sans Mt', sans-serif;
 }
