--- a/src/components/shared/checkbox/checkbox.scss
+++ b/src/components/shared/checkbox/checkbox.scss
@@ -1,5 +1,5 @@
 .checkbox {
-    font-family: 'Gill Sans MT';
+    font-family: 'Gill Sans Mt', sans-serif;
     width: auto;
     height: auto;
     padding: 10px;
@@ -30,7 +30,7 @@
 
     &--label {
         padding: 10px 10px;
-        font-family: 'Gill Sans MT';
+        font-family: 'Gill Sans Mt', sans-serif;
         font-size: 20px;
     }
 
