--- a/src/components/shared/image-upload/image-upload.scss
+++ b/src/components/shared/image-upload/image-upload.scss
@@ -17,7 +17,7 @@
         box-shadow: 3px 5px 9px 0px rgb(0 0 0 / 25%);
         border-radius: 20px;
         margin: 10px;
-        font-family: 'Gill Sans MT';
+        font-family: 'Gill Sans Mt', sans-serif;
         &:hover, &:focus{
             cursor: pointer;
             border: 1px dashed $token-button-primary-background-color-base;
@@ -64,7 +64,7 @@
         font-size: 20px;
         cursor: pointer;
         font-weight: 400;
-        font-family: 'Gill Sans MT';
+        font-family: 'Gill Sans Mt', sans-serif;
 
         &:hover{
             background: linear-gradient(102.45deg, #8F60DF 0%, #6D3BC2 72.25%, #5D379E 98.73%);
