--- a/src/components/shared/text-area/text-area.scss
+++ b/src/components/shared/text-area/text-area.scss
@@ -1,5 +1,5 @@
 .text-area {
-    font-family: 'Gill Sans MT';
+    font-family: 'Gill Sans Mt', sans-serif;
     width: auto;
     height: auto;
     padding: 0px 10px;
@@ -39,7 +39,7 @@
         box-shadow: 3px 4px 9px -2px #aab4e7cc;
         padding: 0px 10px;
         font-size: 20px;
-        font-family: 'Gill Sans MT';
+        font-family: 'Gill Sans Mt', sans-serif;
 
         &:focus {
             outline: none;
