--- a/src/components/shared/toaster/toaster.scss
+++ b/src/components/shared/toaster/toaster.scss
@@ -55,7 +55,7 @@
     max-width: 250px;
     min-width: 246px;
     font-size: 14px;
-    font-family: 'Gill Sans MT';
+    font-family: 'Gill Sans Mt', sans-serif;
     color: white;
     border-radius: 10px;
 }
@@ -76,7 +76,7 @@
     min-height: 100px;
     color: white;
     font-size: 16px;
-    font-family: 'Gill Sans MT';
+    font-family: 'Gill Sans Mt', sans-serif;
     max-width: 250px;
     min-width: 246px;
     z-index: 44;
