--- a/src/pages/profile-page/profile-page.scss
+++ b/src/pages/profile-page/profile-page.scss
@@ -12,7 +12,7 @@
     }
 
     h2 {
-        font-family: Bogue;
+        font-family: 'Bogue', serif;
         width: inherit;
         font-size: 28px;
     }
