--- a/src/App.css
+++ b/src/App.css
@@ -14,24 +14,8 @@
 }
 
 @font-face {
-  font-family: 'Bogue';
-  src: url(./fonts/Bogue\ Regular.ttf) format('ttf'),
-        url(./fonts/Bogue\ Black.ttf) format('ttf'),
-        url(./fonts/Bogue\ Black\ Italic.ttf) format('ttf')
-        url(./fonts/Bogue\ Bold.ttf) format('ttf')
-        url(./fonts/Bogue\ Bold\ Italic.ttf) format('ttf')
-        url(./fonts/Bogue\ Extrabold.ttf) format('ttf')
-        url(./fonts/Bogue\ Extrabold\ Italic.ttf) format('ttf')
-        url(./fonts/Bogue\ Italic.ttf) format('ttf')
-        url(./fonts/Bogue\ Light.ttf) format('ttf')
-        url(./fonts/Bogue\ Light\ Italic.ttf) format('ttf')
-        url(./fonts/Bogue\ Medium.ttf) format('ttf')
-        url(./fonts/Bogue\ Medium\ Italic.ttf) format('ttf')
-        url(./fonts/Bogue\ Semibold.ttf) format('ttf')
-        url(./fonts/Bogue\ Semibold\ Italic.ttf) format('ttf')
-        url(./fonts/Bogue\ Thin.ttf) format('ttf')
-        url(./fonts/Bogue\ Thin\ Italic.ttf) format('ttf');
-  font-weight: 400;
+  font-family: 'Bogue Regular';
+  src: url(./fonts/Bogue\ Regular.ttf) format('ttf');
   font-display: swap;
 }
 
