--- a/src/pages/loading-page/loading-page.scss
+++ b/src/pages/loading-page/loading-page.scss
@@ -1,6 +1,6 @@
 .loading-page {
     h2 {
-        font-family: 'Bogue', serif;
+        font-family: 'Bogue Regular', serif;
         font-size: 2.5rem;
         text-align: center;
         color: #5d00fb;
