--- a/src/pages/patient-page/patient-database/patient-database.scss
+++ b/src/pages/patient-page/patient-database/patient-database.scss
@@ -9,7 +9,7 @@
     margin: 0px;   
     
     h2 {
-        font-family: 'Bogue', serif;
+        font-family: 'Bogue Regular', serif;
         width: inherit;
         height: 100%;
         color: #6d3bc2;
