--- a/src/pages/patient-page/view-patient-page/view-patient-page.scss
+++ b/src/pages/patient-page/view-patient-page/view-patient-page.scss
@@ -12,7 +12,7 @@
     }
 
     h1 {
-        font-family: 'Bogue', serif;
+        font-family: 'Bogue Regular', serif;
         width: inherit;
         color: #5d00fb;
         padding: 20px 10px;
@@ -49,7 +49,7 @@
     .title {
         padding: 20px 20px 10px 20px;
         margin: 0;
-        font-family: 'Bogue', serif;
+        font-family: 'Bogue Regular', serif;
         width: auto;
         position: relative;
         color: $token-button-primary-background-color-base;
@@ -57,7 +57,7 @@
     }
 
     .subtitle {
-        font-family: 'Bogue', serif;
+        font-family: 'Bogue Regular', serif;
         width: auto;
         position: relative;
         border-bottom: 2px solid $token-button-primary-background-color-base;
