--- a/src/App.css
+++ b/src/App.css
@@ -15,29 +15,29 @@
 
 @font-face {
   font-family: 'Bogue Regular';
-  src: url("/fonts/Bogue\ Regular.ttf") format('truetype');
+  src: url("./fonts/Bogue\ Regular.ttf") format('truetype');
   font-display: swap;
 }
 
 @font-face {
   font-family:'Gill Sans Mt';
-  src: url("/fonts/gill-sans-mt.ttf") format('truetype'),
-        url("/fonts/Gill\ Sans\ MT\ Bold.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Bold\ Condensed.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Bold\ Extra\ Condensed.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Bold\ Italic.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Book.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Book\ Italic.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Condensed.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Extra\ Bold.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Heavy.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Heavy\ Italic.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Light.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Light\ Italic.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Medium.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Medium\ Italic.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Ultra\ Bold.ttf") format('truetype')
-        url("/fonts/Gill\ Sans\ MT\ Ultra\ Bold\ Condensed.ttf") format('truetype'); 
+  src: url("./fonts/gill-sans-mt.ttf") format('truetype'),
+        url("./fonts/Gill\ Sans\ MT\ Bold.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Bold\ Condensed.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Bold\ Extra\ Condensed.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Bold\ Italic.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Book.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Book\ Italic.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Condensed.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Extra\ Bold.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Heavy.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Heavy\ Italic.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Light.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Light\ Italic.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Medium.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Medium\ Italic.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Ultra\ Bold.ttf") format('truetype')
+        url("./fonts/Gill\ Sans\ MT\ Ultra\ Bold\ Condensed.ttf") format('truetype'); 
   font-display: swap;
 }
 
