--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 
 
 @font-face {
-  font-family: 'Bogue Regular';
+  font-family: 'Bogue';
   src: url("./fonts/Bogue\ Regular.ttf") format('truetype');
   font-display: swap;
 }
