--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -103,7 +103,7 @@
             
             h4 {
                 font-size: 20px;
-                font-family: 'Bogue Regular', serif;
+                font-family: 'Bogue', serif;
                 width: 40%;
             }
             &:hover {
@@ -134,14 +134,14 @@
         }
 
         h3 {
-            font-family: 'Bogue Regular', serif;
+            font-family: 'Bogue', serif;
             font-size: 2rem;
             margin: 9px;
             color: #7e4ed1;
         }
 
         h2 {
-            font-family: 'Bogue Regular', serif;
+            font-family: 'Bogue', serif;
             font-size: 2.3rem;
         }
         
