--- a/src/components/patient-form/patient-information/patient-information.scss
+++ b/src/components/patient-form/patient-information/patient-information.scss
@@ -37,7 +37,7 @@
             box-shadow: inset -5px 5px 5px #b9b9b9, inset -3px -1px 7px #ffffff;
         }
         &--button {
-            font-family: 'Bogue Regular', serif;
+            font-family: 'Bogue', serif;
             font-size: 22px;
             background-color: rgb(0,0,0,0);
             border: 0px solid;
@@ -82,7 +82,7 @@
 
     .divider {
         h3 {
-            font-family: 'Bogue Regular', serif;
+            font-family: 'Bogue', serif;
             font-size: $token-font-size-lg;
         }
 
