--- a/src/pages/patient-page/ml-prediction-report-page/ml-prediction-report-page.scss
+++ b/src/pages/patient-page/ml-prediction-report-page/ml-prediction-report-page.scss
@@ -16,7 +16,7 @@
     }
 
     h2 {
-        font-family: 'Bogue Regular', serif;
+        font-family: 'Bogue', serif;
         width: inherit;
         // height: 100%;
         // display: flex;
