--- a/src/pages/patient-page/new-patient-page/new-patient-page.scss
+++ b/src/pages/patient-page/new-patient-page/new-patient-page.scss
@@ -14,7 +14,7 @@
     }
 
     h2 {
-        font-family: 'Bogue Regular', serif;
+        font-family: 'Bogue', serif;
         width: inherit;
         font-size: 28px;
     }
