--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ code {
 
 @font-face {
   font-family: 'Bogue';
-  src: url("./fonts/Bogue\ Regular.ttf") format('truetype');
+  src: local('Bogue'), url("./fonts/Bogue\ Regular.ttf") format('truetype');
   font-display: swap;
 }
 
